<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/dialog_header_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/select_language"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />

            <ImageView
                android:id="@+id/iv_close_icon"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_close"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"
            android:background="@drawable/gradient_bottom"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="visible" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="@dimen/_13sdp"/>

            <RadioButton
                android:id="@+id/rb_hindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindi"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <RadioButton
                android:id="@+id/rb_bengali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bengali"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <RadioButton
                android:id="@+id/rb_urdu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urdu"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp" />

            <RadioButton
                android:id="@+id/rb_malayalam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malayalam"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <RadioButton
                android:id="@+id/rb_tamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamil"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <RadioButton
                android:id="@+id/rb_telugu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telugu"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <RadioButton
                android:id="@+id/rb_kannada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kannada"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <RadioButton
                android:id="@+id/rb_marathi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marathi"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <RadioButton
                android:id="@+id/rb_oriya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oriya"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/bottom_layout_LL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_20sdp">

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/cancel_TV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="@dimen/_13sdp"
                android:gravity="center"
                android:background="@drawable/selected_new_order_history"
                android:textColor="@drawable/selector_text_clor_blue_white"
                android:clickable="true"
                android:focusable="true"
                />

            <Space
                android:layout_width="@dimen/_2sdp"
                android:layout_height="match_parent"/>

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/ok_TV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textSize="@dimen/_13sdp"
                android:gravity="center"
                android:background="@drawable/deselected_new_order_history"
                android:textColor="@drawable/selector_text_clor_blue_white"
                android:clickable="true"
                android:focusable="true"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
