<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/attendance_top_bar_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <com.kcteam.widgets.AppCustomTextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <com.kcteam.widgets.AppCustomTextView
            android:id="@+id/tv_planned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/planned"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <com.kcteam.widgets.AppCustomTextView
            android:id="@+id/tv_achv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_achieved"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <com.kcteam.widgets.AppCustomTextView
            android:id="@+id/tv_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>