<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order_item_CV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/_5sdp"
    card_view:cardElevation="@dimen/_3sdp"
    card_view:cardUseCompatPadding="true"
    android:layout_marginTop="@dimen/_5sdp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp">

        <!--1st row-->

        <RelativeLayout
            android:id="@+id/f_row_RL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/company_name_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/capital_electronics"
                android:textColor="@color/login_txt_color"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:id="@+id/order_status_RL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_toRightOf="@id/company_name_TV"
                android:gravity="right">

                <com.kcteam.widgets.AppCustomTextView
                    android:id="@+id/order_status_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/order_status"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/_11sdp" />

                <com.kcteam.widgets.AppCustomTextView
                    android:id="@+id/order_status_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toRightOf="@id/order_status_title_TV"
                    android:text="@string/delivered"
                    android:textColor="@color/delivery_status_green"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>

        </RelativeLayout>

        <!--2nd row-->
        <RelativeLayout
            android:id="@+id/s_row_RL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/f_row_RL"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            >

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/order_date_label_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/order_date"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/_11sdp" />

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/order_date_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_toRightOf="@id/order_date_label_TV"
                android:text="@string/order_status_date"
                android:textColor="@color/login_txt_color"
                android:textSize="@dimen/_11sdp" />

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/order_amount_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/order_amount"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/_11sdp" />

        </RelativeLayout>

        <!--3rd row-->
        <RelativeLayout
            android:id="@+id/t_row_RL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/s_row_RL"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            >

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/order_id_label_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/order_id"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/_11sdp" />

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/order_id_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_toRightOf="@id/order_id_label_TV"
                android:text="@string/order_id_txt"
                android:textColor="@color/login_txt_color"
                android:textSize="@dimen/_11sdp" />

            <com.kcteam.widgets.AppCustomTextView
                android:id="@+id/order_amount_price_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/order_amount_price"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/_13sdp" />


        </RelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>