<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/rounded_corner_white_bg"
    android:orientation="vertical">

    <com.kcteam.widgets.AppCustomTextView
        android:id="@+id/dialog_header_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_5sdp"
        android:background="@drawable/gradient_bottom"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible" />

    <com.kcteam.widgets.AppCustomTextView
        android:id="@+id/dialog_content_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/address_not_accurate"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_15sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal">

        <com.kcteam.widgets.AppCustomTextView
            android:id="@+id/cancel_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_one_side_blue_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <com.kcteam.widgets.AppCustomTextView
            android:id="@+id/update_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/deselected_order_history"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>
</LinearLayout>

